...
        >
          <ModalContainer>
            <ModalContent>
              <CloseContainer>
                <View style={{ flexDirection: "row", alignItems: "center" }}>
                  <CloseTouchable
                    testID="units-list-close-btn"
                    onPress={handleCloseModal}
                  >
                    <Image
                      style={{ height: 20, width: 20, marginRight: 10 }}
                      source={CloseIcon}
                    />
...
          <RefreshControl refreshing={refreshing} onRefresh={onRefresh} />
        }
      >
        <Container type="darkBlue">
          <MenuContainer>
            <MenuTouchable
              testID="home-menu-btn"
              onPress={() => props.navigation.openDrawer()}
            >
              <Image style={{ height: 25, width: 25 }} source={MenuIcon} />
            </MenuTouchable>
            {props.auth.isOwner ? (
              <MenuTouchable
...
